--- a/pom.xml
+++ b/pom.xml
@@ -8,5 +8,10 @@
     <artifactId>Intro_To_Java_Programming</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <properties>
+        <maven.compiler.source>14</maven.compiler.source>
+        <maven.compiler.target>14</maven.compiler.target>
+        <maven.build.sourceEncoding>UTF-8</maven.build.sourceEncoding>
+    </properties>
 
 </project>
